2014-06-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1741: Break PulseAudio provider out into IcedTea-Sound
	* patches/pulse-soundproperties.patch,
	* pulseaudio/COPYING,
	* pulseaudio/README,
	* pulseaudio/src/java/META-INF/services/javax.sound.sampled.spi.MixerProvider,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextEvent.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextListener.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Debug.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/EventLoop.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Operation.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioClip.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioLine.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMixer.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMixerInfo.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMixerProvider.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioPlaybackLine.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioPort.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourcePort.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioTargetDataLine.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioTargetPort.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioVolumeControl.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/SecurityWrapper.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Stream.java,
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/StreamBufferAttributes.java,