@@ -706,6 +706,8 @@ AC_DEFUN_ONCE([IT_ENABLE_ZERO_BUILD],
       use_zero=yes;
     else
       case "${host_cpu}" in
+        aarch64) ;;
+        arm64) ;;
         i?86) ;;
         sparc) ;;
         x86_64) ;;
@@ -929,7 +931,11 @@ AC_DEFUN_ONCE([IT_WITH_GCJ],
 AC_DEFUN_ONCE([IT_WITH_HOTSPOT_BUILD],
 [
   AC_REQUIRE([IT_ENABLE_ZERO_BUILD])
-  DEFAULT_BUILD="default"
+  if test "x$JRE_ARCH_DIR" = "xaarch64"; then
+    DEFAULT_BUILD="aarch64"
+  else
+    DEFAULT_BUILD="default"
+  fi
   AC_MSG_CHECKING([which HotSpot build to use])
   AC_ARG_WITH([hotspot-build],
 	      [AS_HELP_STRING(--with-hotspot-build=BUILD,the HotSpot build to use [[BUILD=default]])],
