@@ -1,3 +1,9 @@
+2014-03-27  Andrew John Hughes  <gnu.andrew@member.fsf.org>
+
+	* acinclude.m4:
+	(IT_ENABLE_ZERO_BUILD): Default to off on aarch64/arm64.
+	(IT_WITH_HOTSPOT_BUILD): Default to aarch64 port on aarch64.
+
 2014-06-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	PR1741: Break PulseAudio provider out into IcedTea-Sound
